--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="scores.json, settings.ini"
-export_path="../../Releases/Tile Breaker/Tile Breaker.exe"
+export_path="../../Releases/Tile Breaker/0.2.0/Tile Breaker.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -79,7 +79,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Releases/Tile Breaker/0.1.0 (Linux)/TileBreaker.x86_64"
+export_path="../../Releases/Tile Breaker/0.2.0 (Linux)/TileBreaker.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
