--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter="scores.json, settings.ini"
-export_path="../../Releases/Tile Breaker/0.2.0/Tile Breaker.exe"
+export_path="../../Releases/Tile Breaker/0.2.0/TileBreaker.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -34,7 +34,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="uid://cqavyg17katnj"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
